# ImHex-Plugin-DiscordRPC

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
lib/discord-game-sdk/: CMakeLists.txt
romfs/lang/: en_US.json
source/: discord_rpc_plugin.cpp
